Add basic HtmlServiceProvider
Signed-off-by: crynobone <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 	],
 	"require": {
 		"php": ">=5.3.3",
+		"illuminate/html": "4.0.*@dev",
 		"illuminate/support": "4.0.*@dev"
 	},
 	"require-dev": {
