--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	"require": {
 		"php": ">=5.3.3",
 		"illuminate/html": "4.0.*@dev",
-		"illuminate/support": "4.0.*@dev"
+		"orchestra/support": "dev-master"
 	},
 	"require-dev": {
 		"mockery/mockery": "0.8.0"
