--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
 		"orchestra/support": "2.0.*"
 	},
 	"require-dev": {
-		"illuminate/html": "4.0.*",
-		"mockery/mockery": "0.8.0"
+		"mockery/mockery": "0.8.0",
+		"illuminate/html": "4.0.*"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform",
