--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 	},
 	"require-dev": {
 		"mockery/mockery": "0.8.0",
+		"illuminate/container": "4.0.*",
 		"illuminate/html": "4.0.*"
 	},
 	"suggest": {
