--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,13 +5,15 @@ filter:
         - 'src/*'
     excluded_paths:
         - 'build/*'
+        - 'src/config/*'
+        - 'src/views/*'
         - 'vendor/*'
         - 'tests/*'
 tools:
     php_mess_detector: true
     php_code_sniffer:
         config:
-            standard: PSR1
+            standard: PSR2
     php_code_coverage:
         config_path: phpunit.xml
     php_cpd:
