--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
 		}
 	],
 	"autoload": {
-		"psr-0": { 
-			"Orchestra\\Html" : "src/" 
+		"psr-0": {
+			"Orchestra\\Html" : "src/"
 		}
 	},
 	"require": {
@@ -23,6 +23,7 @@
 	"require-dev": {
 		"mockery/mockery": "0.8.0",
 		"illuminate/container": "4.0.*",
+		"illuminate/database": "4.0.*",
 		"illuminate/html": "4.0.*"
 	},
 	"suggest": {
