--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 		"orchestra/support": "2.1.*"
 	},
 	"require-dev": {
-		"mockery/mockery": "0.8.0",
+		"mockery/mockery": "0.8.*",
 		"illuminate/container": "4.1.*",
 		"illuminate/database": "4.1.*",
 		"illuminate/html": "4.1.*"
@@ -32,7 +32,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "2.1-dev"
+			"dev-master": "2.2-dev"
 		}
 	},
 	"minimum-stability": "dev"
