Add ability to directly find a control from within the Grid context.
Signed-off-by: crynobone <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 		"illuminate/html": "4.2.*",
 		"illuminate/routing": "4.2.*",
 		"illuminate/translation": "4.2.*",
-		"illuminate/view": "4.2.*"
+		"illuminate/view": "4.2.*",
+		"patchwork/utf8": "1.1.*"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform 2",
