--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 		"illuminate/container": "4.1.*",
 		"illuminate/database": "4.1.*",
 		"illuminate/html": "4.1.*",
+        "illuminate/pagination": "4.1.*",
 		"illuminate/routing": "4.1.*",
 		"illuminate/translation": "4.1.*",
 		"illuminate/view": "4.1.*",
