--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "orchestra/html",
-	"description": "Orchestra Platform 2 Html Component",
+	"description": "HTML Component for Orchestra Platform 2",
 	"homepage": "http://orchestraplatform.com/docs/latest/components/html/",
 	"keywords": ["orchestra-platform", "orchestral", "laravel", "html", "form", "table"],
 	"license": "MIT",
@@ -26,7 +26,7 @@
 		"illuminate/container": "4.1.*",
 		"illuminate/database": "4.1.*",
 		"illuminate/html": "4.1.*",
-        "illuminate/pagination": "4.1.*",
+		"illuminate/pagination": "4.1.*",
 		"illuminate/routing": "4.1.*",
 		"illuminate/translation": "4.1.*",
 		"illuminate/view": "4.1.*",
