--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,16 @@
 	},
 	"require": {
 		"php": ">=5.4.0",
+		"illuminate/contracts": "4.3.*",
 		"illuminate/html": "4.3.*",
 		"orchestra/support": "2.3.*"
 	},
 	"require-dev": {
 		"mockery/mockery": "0.9.*",
-		"illuminate/config": "4.3.*",
-		"illuminate/container": "4.3.*",
 		"illuminate/database": "4.3.*",
 		"illuminate/pagination": "4.3.*",
 		"illuminate/routing": "4.3.*",
 		"illuminate/translation": "4.3.*",
-		"illuminate/view": "4.3.*",
 		"patchwork/utf8": "1.1.*"
 	},
 	"suggest": {
