--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"php": ">=5.4.0",
 		"illuminate/contracts": "5.0.*",
 		"illuminate/html": "5.0.*",
+		"orchestra/contracts": "3.0.*",
 		"orchestra/support": "3.0.*"
 	},
 	"require-dev": {
