--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
 	},
 	"require": {
 		"php": ">=5.4.0",
-		"illuminate/contracts": "5.0.*",
 		"orchestra/contracts": "3.0.*",
 		"orchestra/support": "3.0.*"
 	},
@@ -29,8 +28,7 @@
 		"mockery/mockery": "0.9.*",
 		"illuminate/database": "5.0.*",
 		"illuminate/routing": "5.0.*",
-		"illuminate/translation": "5.0.*",
-		"patchwork/utf8": "1.1.*"
+		"illuminate/translation": "5.0.*"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform",
