--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
 		"illuminate/translation": "5.0.*"
 	},
 	"suggest": {
-		"laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform",
-		"orchestra/foundation": "Allow using orchestra/html with Orchestra Platform"
+		"laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform (~5.0).",
+		"orchestra/foundation": "Allow using orchestra/html with Orchestra Platform (~3.0)."
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "3.1-dev"
+			"dev-master": "3.2-dev"
 		}
 	},
 	"minimum-stability": "dev"
