--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
 	},
 	"require": {
 		"php": ">=5.5.0",
-		"orchestra/support": "3.1.*"
+		"orchestra/support": "~3.1.0"
 	},
 	"require-dev": {
 		"mockery/mockery": "^0.9.1",
-		"illuminate/database": "5.1.*",
-		"illuminate/pagination": "5.1.*",
-		"illuminate/routing": "5.1.*",
-		"illuminate/translation": "5.1.*"
+		"illuminate/database": "~5.1.0",
+		"illuminate/pagination": "~5.1.0",
+		"illuminate/routing": "~5.1.0",
+		"illuminate/translation": "~5.1.0"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform (~5.1).",
