--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.5.0",
-        "laravie/html": "dev-master",
+        "laravie/html": "~5.2.0",
         "orchestra/support": "~3.2.0"
     },
     "require-dev": {
