--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,15 @@
     "require": {
         "php": ">=5.5.0",
         "laravie/html": "~5.2.0",
+        "illuminate/http": "~5.2.0",
+        "illuminate/translation": "~5.2.0",
+        "orchestra/contracts": "~3.2.0",
         "orchestra/support": "~3.2.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.1",
         "illuminate/database": "~5.2.0",
-        "illuminate/pagination": "~5.2.0",
-        "illuminate/routing": "~5.2.0",
-        "illuminate/translation": "~5.2.0"
+        "illuminate/pagination": "~5.2.0"
     },
     "suggest": {
         "laravel/framework": "Allow using orchestra/html component outside of Orchestra Platform (~5.2).",
