--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": ">=5.5.0",
         "laravie/html": "~5.1.0",
+        "orchestra/contracts": "~3.1.14",
         "orchestra/support": "~3.1.3"
     },
     "require-dev": {
