--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     },
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1",
         "illuminate/translation": "~5.6.0",
         "laravie/html": "~5.6.0",
         "orchestra/contracts": "~3.6.0",
@@ -25,7 +25,7 @@
     },
     "require-dev": {
         "illuminate/database": "~5.6.0",
-        "mockery/mockery": "^0.9.4",
+        "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
     },
     "extra": {
