--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     },
     "require-dev": {
         "illuminate/database": "~5.6.0",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.0"
     },
     "extra": {
         "branch-alias": {
