--- a/composer.json
+++ b/composer.json
@@ -18,19 +18,19 @@
     },
     "require": {
         "php": ">=7.1",
-        "illuminate/translation": "~5.7.0",
-        "laravie/html": "~5.7.0",
-        "orchestra/contracts": "~3.7.0",
-        "orchestra/support": "~3.7.0"
+        "illuminate/translation": "dev-master",
+        "laravie/html": "~5.8.0",
+        "orchestra/contracts": "~3.8.0",
+        "orchestra/support": "~3.8.0"
     },
     "require-dev": {
-        "illuminate/database": "~5.7.0",
+        "illuminate/database": "dev-master",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^7.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.7-dev"
+            "dev-master": "3.8-dev"
         }
     },
     "config": {
