--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     },
     "require": {
         "php": ">=7.1",
-        "illuminate/translation": "dev-master",
+        "illuminate/translation": "~5.8.0",
         "laravie/html": "~5.8.0",
         "orchestra/contracts": "~3.8.0",
         "orchestra/support": "~3.8.0"
     },
     "require-dev": {
-        "illuminate/database": "dev-master",
+        "illuminate/database": "~5.8.0",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^7.0"
     },
