--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require-dev": {
         "illuminate/database": "~5.8.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.5 || ^8.0"
     },
     "extra": {
         "branch-alias": {
