--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require-dev": {
         "illuminate/database": "^7.0",
         "mockery/mockery": "^1.2",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "^5.0"
     },
     "extra": {
         "branch-alias": {
