--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto
 
 # Ignore following folder/file.
+/.github export-ignore
 /tests export-ignore
 /.coveralls.yml export-ignore
 /.editorconfig export-ignore
@@ -11,5 +12,7 @@
 /.travis.yml export-ignore
 /phpunit.xml export-ignore
 /CHANGELOG-*.md export-ignore
+/CODE_OF_CONDUCT.md export-ignore
+/CONTRIBUTING.md export-ignore
 /LICENSE export-ignore
 /README.md export-ignore
