--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
         }
     },
     "require": {
-        "php": ">=7.2",
-        "illuminate/translation": "^7.0",
-        "laravie/html": "^7.0",
-        "laravie/query-filter": "^1.6.1",
-        "orchestra/contracts": "^5.0",
-        "orchestra/support": "^5.0"
+        "php": ">=7.3",
+        "illuminate/translation": "^8.0",
+        "laravie/html": "^8.0",
+        "laravie/query-filter": "dev-master",
+        "orchestra/contracts": "^6.0",
+        "orchestra/support": "^6.0"
     },
     "require-dev": {
-        "illuminate/database": "^7.0",
-        "orchestra/testbench": "^5.0"
+        "illuminate/database": "^8.0",
+        "orchestra/testbench": "^6.0"
     },
     "extra": {
         "branch-alias": {
