--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
         }
     },
     "require": {
-        "php": ">=7.3",
+        "php": "^7.3 || ^8.0",
         "illuminate/translation": "^8.0",
         "laravie/html": "^7.2",
-        "laravie/query-filter": "^2.0",
+        "laravie/query-filter": "^2.1",
         "orchestra/contracts": "^6.0",
         "orchestra/support": "^6.0"
     },
     "require-dev": {
         "illuminate/database": "^8.0",
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^6.17"
     },
     "extra": {
         "branch-alias": {
