--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     },
     "require": {
         "php": "^7.3 || ^8.0",
-        "illuminate/translation": "^8.0",
+        "illuminate/translation": "^8.40",
+        "illuminate/support": "^8.40",
         "laravie/html": "^7.2",
         "laravie/query-filter": "^2.1",
         "orchestra/contracts": "^6.0",
-        "orchestra/support": "^6.0"
+        "orchestra/support": "^6.1"
     },
     "require-dev": {
-        "illuminate/database": "^8.0",
         "orchestra/testbench": "^6.17"
     },
     "extra": {
